# OpenGL-Fractal

./: .gitmodules  CMakeLists.txt  LICENSE
includes/: shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: frag_default.fs  vert_default.vs
src/: main.cpp
